# dsad

./: README.md  app.py  pyproject.toml
data/: sample_log.csv
src/: data_loader.py  features.py  plots.py  scoring.py
src/trading_alpha_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
